# Syncify

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
syncify/: __init__.py  __main__.py  youtube.py
syncify/spotify/: Spotify_likes_info.py  Spotify_playlist_info.py  Spotify_track_info.py  __init__.py  utils.py
